Dev to stage (#127)
* Fixed it: the list of displayed nodes was not updated when accessed from the filter view.

* Fixed it: the list of displayed nodes was not updated when accessed from the filter view. Now tree.shake also update this list at the end.

* uncheck "all" do not deselect parent. deselect node also set "all" to false.

* Index was trying to access a function for data-function:"/login" but the function does not exist. It doesn' try to access the funciton anymore.

* Fixed, when imported from db, nodes get a defType parameter setup. This param was not set up when received from the create function. It is now set (by cloning defTypeTitle)

* switch is now on the right without text.

* fixed: tree not loaded was causing error, probably terminating function that would later init toolbar.

* Update index.js

* fix C2_79 & C2_82

* Update dataRendererHelper.js

* Update dataRendererHelper.js

* fix: syntax error

* added filter to table view

* fixed: bulkFetch have a limit of items returned. I removed the limit. The limit caused sometimes all rels or all nodes where not added, resulting in wrong behavior.

* Solved some edge case were the relations involving non selected nodes were still in the list to display.

* removed useless code.

* removed dbStore. Now remains the tree logic, which is called by the state.

* fixed table not showing for other views than filter and that filter disappeared when sorting the table in filter view

* removed some unused code.

* Revert "fixed table not showing for other views than filter and that filter d…"

* chore: checkboxes reacting WIP

* chore: ttriggering console.log

* Seems to work. Will make some comparison tests.

* cbcob

* Comparison, on my computer with local contechos
Fetching all IFC class previously took 23.sec (or more).
Now take 4-5 secs.
It can easily be further optimized but it is not a priority, and the optimization would overlap the work to be done on t

--- a/public/index.css
+++ b/public/index.css
@@ -6,9 +6,12 @@ body,
   padding: 0;
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 .linkLabel {
   text-shadow: 0 0 2px white, 0 0 2px white, 0 0 2px white, 0 0 2px white,
     0 0 2px white, 0 0 2px white, 0 0 2px white, 0 0 2px white;
 }
+
+
